#279 Impoving the tracking abilities of import events by adding structured log.

--- a/spring-cloud-huawei-config/pom.xml
+++ b/spring-cloud-huawei-config/pom.xml
@@ -55,6 +55,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-aop</artifactId>
     </dependency>
+      <dependency>
+          <groupId>com.huaweicloud</groupId>
+          <artifactId>spring-cloud-huawei-servicecomb-discovery</artifactId>
+      </dependency>
   </dependencies>
 
 </project>
