modify as comment

--- a/spring-cloud-huawei-sample/governance-demo/consumer/src/main/resources/application.yaml
+++ b/spring-cloud-huawei-sample/governance-demo/consumer/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
       discovery:
         address: http://127.0.0.1:30100
 servicecomb:
-  match:
+  matchGroup:
     demo-rateLimiting: |
       matches:
         - apiPath:
