--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -5,14 +5,14 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-huawei</artifactId>
-    <version>1.3.3-Hoxton-SNAPSHOT</version>
+    <version>1.3.8-Greenwich</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>spring-cloud-huawei-dependencies</artifactId>
   <packaging>pom</packaging>
-  <version>1.3.3-Hoxton-SNAPSHOT</version>
+  <version>1.3.8-Greenwich</version>
   <name>Spring Cloud Huawei Dependencies</name>
   <properties>
     <feign-core.version>11.0</feign-core.version>
@@ -25,7 +25,6 @@
     <snakeyaml.version>1.26</snakeyaml.version>
     <commons-configuration.version>1.10</commons-configuration.version>
     <websocket.version>1.5.0</websocket.version>
-    <reactor.version>3.3.3.RELEASE</reactor.version>
   </properties>
 
   <dependencyManagement>
@@ -171,11 +170,6 @@
         <groupId>org.java-websocket</groupId>
         <artifactId>Java-WebSocket</artifactId>
         <version>${websocket.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.projectreactor</groupId>
-        <artifactId>reactor-core</artifactId>
-        <version>${reactor.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
