--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-servicecomb-discovery/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-servicecomb-discovery/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-starter-huawei</artifactId>
-    <version>1.3.3-Hoxton-SNAPSHOT</version>
+    <version>1.3.8</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>spring-cloud-starter-huawei-servicecomb-discovery</artifactId>
