[issue #297] governance ignore unknown yaml / decoupling with config … (#301)
* [issue #297] governance ignore unknown yaml / decoupling with config module

* [issue #297] change read value's way

* [issue #297] remove reflect

--- a/spring-cloud-huawei-governance/pom.xml
+++ b/spring-cloud-huawei-governance/pom.xml
@@ -57,9 +57,14 @@
       <artifactId>snakeyaml</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.huaweicloud</groupId>
-      <artifactId>spring-cloud-huawei-config</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.jmockit</groupId>
+      <artifactId>jmockit</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
