[#311]基于流量特征标记的治理功能：将公共能力代码抽取出来在其他项目复用

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
     <module>spring-cloud-huawei-router-core</module>
     <module>spring-cloud-huawei-router-client</module>
     <module>spring-cloud-huawei-swagger</module>
+    <module>governance</module>
     <module>spring-cloud-huawei-governance</module>
   </modules>
 
