[issue #313] fix admin server error

--- a/spring-cloud-huawei-sample/minimized-demo/provider-demo/src/main/resources/application.yaml
+++ b/spring-cloud-huawei-sample/minimized-demo/provider-demo/src/main/resources/application.yaml
@@ -7,4 +7,4 @@ spring:
   cloud:
     servicecomb:
       discovery:
-        address: https://cse.cn-north-4.myhuaweicloud.com
+        address: http://127.0.0.1:30100
