--- a/spring-cloud-huawei-sample/governance-demo/consumer/pom.xml
+++ b/spring-cloud-huawei-sample/governance-demo/consumer/pom.xml
@@ -11,4 +11,12 @@
 
   <artifactId>consumer</artifactId>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
