--- a/integration-tests/discovery-tests/order-consumer/pom.xml
+++ b/integration-tests/discovery-tests/order-consumer/pom.xml
@@ -38,6 +38,10 @@
     </dependency>
     <dependency>
       <groupId>com.huaweicloud</groupId>
+      <artifactId>spring-cloud-starter-huawei-governance</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-swagger</artifactId>
     </dependency>
     <dependency>
