--- a/spring-cloud-huawei-parents/pom.xml
+++ b/spring-cloud-huawei-parents/pom.xml
@@ -16,6 +16,26 @@
   <version>1.3.3-Hoxton-SNAPSHOT</version>
   <name>Spring Cloud Huawei Dependencies</name>
 
+
+  <dependencies>
+    <!-- unit test-->
+    <dependency>
+      <groupId>org.jmockit</groupId>
+      <artifactId>jmockit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
   <profiles>
     <profile>
       <id>it</id>
