--- a/integration-tests/discovery-tests/order-consumer/pom.xml
+++ b/integration-tests/discovery-tests/order-consumer/pom.xml
@@ -42,6 +42,10 @@
     </dependency>
     <dependency>
       <groupId>com.huaweicloud</groupId>
+      <artifactId>spring-cloud-huawei-router-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-swagger</artifactId>
     </dependency>
     <dependency>
