--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-dtm/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-dtm/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-starter-huawei</artifactId>
-    <version>1.3.3-Hoxton-SNAPSHOT</version>
+    <version>1.3.9</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
