--- a/coverage-reports/pom.xml
+++ b/coverage-reports/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-huawei-parents</artifactId>
-    <version>1.3.9</version>
+    <version>1.3.9-Greenwich</version>
     <relativePath>../spring-cloud-huawei-parents</relativePath>
   </parent>
 
