--- a/spring-cloud-huawei-governance/pom.xml
+++ b/spring-cloud-huawei-governance/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>spring-cloud-huawei-parents</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <version>1.3.9</version>
+    <version>1.3.9-Greenwich</version>
     <relativePath>../spring-cloud-huawei-parents</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
