--- a/spring-cloud-huawei-sample/governance-demo/consumer/src/main/resources/application.yaml
+++ b/spring-cloud-huawei-sample/governance-demo/consumer/src/main/resources/application.yaml
@@ -31,23 +31,27 @@ servicecomb:
             exact: "/bulkhead"
           name: xx
   rateLimiting:
-    xxxxx: |
+    demo-rateLimiting: |
       rules:
-        match: demo-rateLimiting.xx
+        match: xx
       rate: 1
+      name: xx
   retry:
-    xxx: |
+    demo-retry: |
       rules:
-        match: demo-retry.xx
+        match: xx
       maxAttempts: 3
+      name: xx
   circuitBreaker:
-    xxx: |
+    demo-circuitBreaker: |
       rules:
-        match: demo-circuitBreaker.xx
+        match: xx
       minimumNumberOfCalls: 2
       slidingWindowSize: 2
+      name: xx
   bulkhead:
-    xxx: |
+    demo-bulkhead: |
       rules:
-        match: demo-bulkhead.xx
+        match: xx
       maxConcurrentCalls: 1
+      name: xx
