--- a/spring-cloud-huawei-sample/gateway-demo/gateway/pom.xml
+++ b/spring-cloud-huawei-sample/gateway-demo/gateway/pom.xml
@@ -19,6 +19,12 @@
     <dependency>
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-servicecomb-discovery</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-webmvc</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
