[#338] add easier to use integration pom for spring microservice and gateway

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 
   <modules>
     <module>spring-cloud-huawei-dependencies</module>
+    <module>spring-cloud-huawei-bom</module>
     <module>spring-cloud-huawei-parents</module>
     <module>spring-cloud-huawei-common</module>
     <module>spring-cloud-huawei-servicecomb-discovery</module>
