--- a/spring-cloud-huawei-bom/pom.xml
+++ b/spring-cloud-huawei-bom/pom.xml
@@ -10,42 +10,13 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>spring-cloud-huawei-dependencies</artifactId>
+  <artifactId>spring-cloud-huawei-bom</artifactId>
   <packaging>pom</packaging>
   <version>1.3.3-Hoxton-SNAPSHOT</version>
-  <name>Spring Cloud Huawei Dependencies</name>
-  <properties>
-    <feign-core.version>11.0</feign-core.version>
-    <httpclient.version>4.5.9</httpclient.version>
-    <jackson-databind.version>2.9.10.5</jackson-databind.version>
-    <jmockit.version>1.36</jmockit.version>
-    <junit.version>4.12</junit.version>
-    <dtm-client.version>1.0.2</dtm-client.version>
-    <guava.version>27.0.1-jre</guava.version>
-    <snakeyaml.version>1.26</snakeyaml.version>
-    <commons-configuration.version>1.10</commons-configuration.version>
-    <websocket.version>1.5.0</websocket.version>
-    <reactor.version>3.3.3.RELEASE</reactor.version>
-  </properties>
+  <name>Spring Cloud Huawei BOM</name>
 
   <dependencyManagement>
     <dependencies>
-      <!-- core dependencies of spring cloud huawei, put it in the begging -->
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>${spring-boot.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-
       <!-- this project -->
       <dependency>
         <groupId>com.huaweicloud</groupId>
@@ -126,65 +97,6 @@
         <groupId>com.huaweicloud</groupId>
         <artifactId>spring-cloud-starter-huawei-service-engine-gateway</artifactId>
         <version>${project.version}</version>
-      </dependency>
-      <!-- huawei parts -->
-      <dependency>
-        <groupId>com.huawei.paas.dtm</groupId>
-        <artifactId>dtm-client</artifactId>
-        <version>${dtm-client.version}</version>
-        <exclusions>
-          <exclusion>
-            <artifactId>spring-boot-starter</artifactId>
-            <groupId>org.springframework.boot</groupId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.servicecomb</groupId>
-        <artifactId>foundation-common</artifactId>
-        <version>${servicecomb.version}</version>
-      </dependency>
-
-      <!-- other 3rd parties -->
-      <dependency>
-        <groupId>io.github.openfeign</groupId>
-        <artifactId>feign-core</artifactId>
-        <version>${feign-core.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava</artifactId>
-        <version>${guava.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.yaml</groupId>
-        <artifactId>snakeyaml</artifactId>
-        <version>${snakeyaml.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.jmockit</groupId>
-        <artifactId>jmockit</artifactId>
-        <version>${jmockit.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-databind</artifactId>
-        <version>${jackson-databind.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-configuration</groupId>
-        <artifactId>commons-configuration</artifactId>
-        <version>${commons-configuration.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.java-websocket</groupId>
-        <artifactId>Java-WebSocket</artifactId>
-        <version>${websocket.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>io.projectreactor</groupId>
-        <artifactId>reactor-core</artifactId>
-        <version>${reactor.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
