--- a/spring-cloud-huawei-governance/pom.xml
+++ b/spring-cloud-huawei-governance/pom.xml
@@ -34,6 +34,11 @@
       <artifactId>feign-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-huawei-common</artifactId>
     </dependency>
