--- a/spring-cloud-starter-huawei/pom.xml
+++ b/spring-cloud-starter-huawei/pom.xml
@@ -18,6 +18,8 @@
     <module>spring-cloud-starter-huawei-config</module>
     <module>spring-cloud-starter-huawei-swagger</module>
     <module>spring-cloud-starter-huawei-governance</module>
+    <module>spring-cloud-starter-huawei-service-engine</module>
+    <module>spring-cloud-starter-huawei-service-engine-gateway</module>
   </modules>
 
 </project>
