--- a/spring-cloud-huawei-bom/pom.xml
+++ b/spring-cloud-huawei-bom/pom.xml
@@ -22,14 +22,14 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-huawei</artifactId>
-    <version>1.3.3-Hoxton-SNAPSHOT</version>
+    <version>1.5.0</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>spring-cloud-huawei-bom</artifactId>
   <packaging>pom</packaging>
-  <version>1.3.3-Hoxton-SNAPSHOT</version>
+  <version>1.5.0</version>
   <name>Spring Cloud Huawei BOM</name>
 
   <dependencyManagement>
