--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,6 @@
     <module>spring-cloud-huawei-parents</module>
     <module>spring-cloud-huawei-common</module>
     <module>spring-cloud-huawei-servicecomb-discovery</module>
-    <module>spring-cloud-huawei-sample</module>
     <module>spring-cloud-starter-huawei</module>
     <module>spring-cloud-huawei-dtm</module>
     <module>spring-cloud-huawei-config</module>
@@ -112,6 +111,12 @@
       <modules>
         <module>integration-tests</module>
         <module>coverage-reports</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>sample</id>
+      <modules>
+        <module>spring-cloud-huawei-sample</module>
       </modules>
     </profile>
   </profiles>
