prepare release of 1.5.0-Hoxton

--- a/governance/pom.xml
+++ b/governance/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>spring-cloud-huawei-parents</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <version>1.5.0</version>
+    <version>1.5.0-Hoxton</version>
     <relativePath>../spring-cloud-huawei-parents</relativePath>
   </parent>
 
