--- a/integration-tests/discovery-tests/order-consumer/pom.xml
+++ b/integration-tests/discovery-tests/order-consumer/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>discovery-tests</artifactId>
-    <version>1.5.0</version>
+    <version>1.5.0-Hoxton</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
