--- a/spring-cloud-huawei-sample/canary-demo/canary-provider-beta/pom.xml
+++ b/spring-cloud-huawei-sample/canary-demo/canary-provider-beta/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>canary-demo</artifactId>
-    <version>1.5.0-Hoxton</version>
+    <version>1.5.0-Greenwich</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
