--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-huawei-parents</artifactId>
-    <version>1.5.0-Hoxton</version>
+    <version>1.6.0-Hoxton-SNAPSHOT</version>
     <relativePath>../spring-cloud-huawei-parents</relativePath>
   </parent>
 
