--- a/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine-gateway/pom.xml
+++ b/spring-cloud-starter-huawei/spring-cloud-starter-huawei-service-engine-gateway/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>spring-cloud-starter-huawei</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <version>1.5.0-Hoxton</version>
+    <version>1.6.0-Hoxton-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
