--- a/spring-cloud-huawei-sample/minimized-demo/consumer-demo/pom.xml
+++ b/spring-cloud-huawei-sample/minimized-demo/consumer-demo/pom.xml
@@ -27,14 +27,31 @@
 
   <properties>
     <java.version>1.8</java.version>
+    <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
+    <spring-cloud.version>Hoxton.SR4</spring-cloud.version>
+    <spring-cloud-huawei.version>1.5.0-Hoxton</spring-cloud-huawei.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${spring-boot.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
         <groupId>com.huaweicloud</groupId>
-        <artifactId>spring-cloud-huawei-dependencies</artifactId>
-        <version>1.3.9</version>
+        <artifactId>spring-cloud-huawei-bom</artifactId>
+        <version>${spring-cloud-huawei.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
