--- a/spring-cloud-huawei-sample/config-demo/src/main/resources/bootstrap.yml
+++ b/spring-cloud-huawei-sample/config-demo/src/main/resources/bootstrap.yml
@@ -22,6 +22,7 @@ spring:
       discovery:
         version: 0.0.1
       config:
+        serverAddr: http://127.0.0.1:30113
         fileSource: file1,file2
         watch:
           delay: 10000
