[issue #353] support read yaml file from config center (#352)
* support read yaml file from config center

* add licence

* update demo

* delete testing code

* modify as comment

--- a/spring-cloud-huawei-sample/config-demo/src/main/resources/bootstrap.yml
+++ b/spring-cloud-huawei-sample/config-demo/src/main/resources/bootstrap.yml
@@ -22,7 +22,8 @@ spring:
       discovery:
         version: 0.0.1
       config:
-        serverAddr:  http://127.0.0.1:30113
+        serverAddr: http://127.0.0.1:30113
+        fileSource: file1,file2
         watch:
           delay: 10000
       credentials:
