--- a/coverage-reports/pom.xml
+++ b/coverage-reports/pom.xml
@@ -65,13 +65,13 @@
     <!-- discovery-tests -->
     <dependency>
       <groupId>com.huaweicloud</groupId>
-      <artifactId>order-consumer</artifactId>
+      <artifactId>order-consumer-test</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.huaweicloud</groupId>
-      <artifactId>price-provider</artifactId>
+      <artifactId>price-provider-test</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
