--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,8 @@
     <java.version>1.8</java.version>
     <!-- spring-cloud-dependencies do not import spring-boot-dependencies, spring-boot-dependencies
      import spring-framework-bom. No need configure spring version. -->
-    <spring-cloud.version>Hoxton.SR4</spring-cloud.version>
-    <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
+    <spring-cloud.version>2.0.4.RELEASE</spring-cloud.version>
+    <spring-boot.version>2.0.9.RELEASE</spring-boot.version>
     <servicecomb.version>2.0.2</servicecomb.version>
   </properties>
 
