--- a/spring-cloud-huawei-sample/gateway-demo/pom.xml
+++ b/spring-cloud-huawei-sample/gateway-demo/pom.xml
@@ -28,7 +28,6 @@
   <artifactId>gateway-demo</artifactId>
   <modules>
     <module>backend-service</module>
-    <module>gateway</module>
     <module>zuul</module>
   </modules>
 
@@ -43,7 +42,21 @@
       </dependency>
       <dependency>
         <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
+        <artifactId>spring-cloud-commons-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-netflix-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-openfeign-dependencies</artifactId>
         <version>${spring-cloud.version}</version>
         <type>pom</type>
         <scope>import</scope>
