#362 encoding project name for non english

--- a/spring-cloud-huawei-sample/discovery-demo/order-consumer/src/main/resources/application.yaml
+++ b/spring-cloud-huawei-sample/discovery-demo/order-consumer/src/main/resources/application.yaml
@@ -35,4 +35,4 @@ spring:
         accessKey: your ak
         secretKey: your sk
         akskCustomCipher: default
-        project: cn-east-2
+        project: 北京一
