--- a/integration-tests/discovery-tests/discovery-tests-client/pom.xml
+++ b/integration-tests/discovery-tests/discovery-tests-client/pom.xml
@@ -127,6 +127,37 @@
                     </dependsOn>
                   </run>
                 </image>
+
+                <image>
+                  <name>account-provider:${project.version}</name>
+                  <alias>account-provider</alias>
+                  <run>
+                    <env>
+                      <JAVA_OPTS>
+                        -Dspring.cloud.servicecomb.discovery.address=http://sc.servicecomb.io:30100
+                      </JAVA_OPTS>
+                      <JAR_PATH>/maven/account-provider-${project.version}.jar</JAR_PATH>
+                    </env>
+                    <links>
+                      <link>service-center:sc.servicecomb.io</link>
+                    </links>
+                    <wait>
+                      <log>register microservice successfully</log>
+                      <tcp>
+                        <ports>
+                          <port>9092</port>
+                        </ports>
+                      </tcp>
+                      <time>120000</time>
+                    </wait>
+                    <ports>
+                      <port>9092:9092</port>
+                    </ports>
+                    <dependsOn>
+                      <container>service-center</container>
+                    </dependsOn>
+                  </run>
+                </image>
               </images>
             </configuration>
             <executions>
