--- a/integration-tests/discovery-tests/pom.xml
+++ b/integration-tests/discovery-tests/pom.xml
@@ -30,6 +30,7 @@
   <modules>
     <module>price-provider</module>
     <module>order-consumer</module>
+    <module>account-provider</module>
     <module>discovery-tests-client</module>
   </modules>
 
