--- a/integration-tests/cse-v2/consumer/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v2/consumer/src/main/resources/bootstrap.yml
@@ -25,19 +25,18 @@ spring:
         enabled: true
         watch: false
         address: https://cse.cn-south-1.myhuaweicloud.com
-        appName: cse-v1-test-application
+        appName: cse-v2-test-application
         serviceName: ${spring.application.name}
         version: 0.0.1
         healthCheckInterval: 30
       config:
         serverAddr: https://cse.cn-south-1.myhuaweicloud.com
+        serverType: kie
         fileSource: consumer.yaml
         watch:
           delay: 10000
 
       credentials:
-        enabled: true
-        accessKey: ${CREDENTIALS_AK}
-        secretKey: ${CREDENTIALS_SK}
-        akskCustomCipher: default
-        project: cn-south-1
+        account:
+          name: your account name
+          password: your password
