--- a/integration-tests/cse-v2/gateway/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v2/gateway/src/main/resources/bootstrap.yml
@@ -37,8 +37,8 @@ spring:
 
       credentials:
         account:
-          name: your account name
-          password: your password
+          name: ${rbac_account_name}
+          password: ${rbac_password}
 
 ## rate limiting configuration
 servicecomb:
