--- a/integration-tests/cse-v2/gateway/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v2/gateway/src/main/resources/bootstrap.yml
@@ -15,7 +15,8 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
-
+server:
+  env: production
 spring:
   application:
     name: basic-gateway
@@ -25,20 +26,19 @@ spring:
         appName: cse-v2-test-application
         serviceName: ${spring.application.name}
         watch: false
-        address: https://cse.cn-south-1.myhuaweicloud.com
+        address: ${CSE_V2_SC}
         version: 0.0.1
         healthCheckInterval: 30
       config:
-        serverAddr: https://cse.cn-south-1.myhuaweicloud.com
+        serverAddr: ${CSE_V2_CC}
         serverType: kie
-        fileSource: gateway.yaml
         watch:
           delay: 10000
 
-      credentials:
-        account:
-          name: ${rbac_account_name}
-          password: ${rbac_password}
+#      credentials:
+#        account:
+#          name: ${CSE_V2_ACCOUNT_NAME}
+#          password: ${CSE_V2_ACCOUNT_PASSWORD}
 
 ## rate limiting configuration
 servicecomb:
