--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -34,6 +34,7 @@
     <module>docker-run-config</module>
     <module>discovery-tests</module>
     <module>cse-v1</module>
+    <module>cse-v2</module>
   </modules>
 
   <dependencies>
