[#327]using the common config API to replace current implementation

--- a/spring-cloud-huawei-common/pom.xml
+++ b/spring-cloud-huawei-common/pom.xml
@@ -87,6 +87,11 @@
       <artifactId>foundation-spi</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.huaweicloud</groupId>
+      <artifactId>http-client-common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>failureaccess</artifactId>
       <version>1.0.1</version>
