[#327]fix possible status is null problem and tests error

--- a/integration-tests/discovery-tests/account-provider/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-tests/account-provider/src/main/resources/bootstrap.yaml
@@ -34,3 +34,6 @@ spring:
       # testing spring cloud swagger generation
       swagger:
         enableJavaChassisAdapter: false
+
+      config:
+        enabled: false
