--- a/integration-tests/discovery-tests/order-consumer/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-tests/order-consumer/src/main/resources/bootstrap.yaml
@@ -32,6 +32,9 @@ spring:
       swagger:
         enableJavaChassisAdapter: true
 
+      config:
+        enabled: false
+
 servicecomb:
   matchGroup:
     demo-rateLimiting: |
