--- a/integration-tests/discovery-tests/price-provider/src/main/resources/bootstrap.yaml
+++ b/integration-tests/discovery-tests/price-provider/src/main/resources/bootstrap.yaml
@@ -38,3 +38,6 @@ spring:
       # testing spring cloud swagger generation
       swagger:
         enableJavaChassisAdapter: false
+
+      config:
+        enabled: false
