[#327]fix swagger test case randomly fail

--- a/integration-tests/discovery-tests/price-provider/pom.xml
+++ b/integration-tests/discovery-tests/price-provider/pom.xml
@@ -40,6 +40,10 @@
       <groupId>com.huaweicloud</groupId>
       <artifactId>spring-cloud-starter-huawei-service-engine</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-core</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
