--- a/spring-cloud-huawei-dependencies/pom.xml
+++ b/spring-cloud-huawei-dependencies/pom.xml
@@ -42,6 +42,9 @@
     <snakeyaml.version>1.26</snakeyaml.version>
     <commons-configuration.version>1.10</commons-configuration.version>
     <websocket.version>1.5.0</websocket.version>
+    <spring-fox.version>3.0.0</spring-fox.version>
+    <swagger-core.version>2.1.9</swagger-core.version>
+    <swagger-core-v2.version>1.6.2</swagger-core-v2.version>
   </properties>
 
   <dependencyManagement>
@@ -71,6 +74,32 @@
         <scope>import</scope>
       </dependency>
 
+      <!-- swagger -->
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-boot-starter</artifactId>
+        <version>${spring-fox.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.swagger.core.v3</groupId>
+        <artifactId>swagger-core</artifactId>
+        <version>${swagger-core.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.swagger</groupId>
+        <artifactId>swagger-core</artifactId>
+        <version>${swagger-core-v2.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.swagger</groupId>
+        <artifactId>swagger-models</artifactId>
+        <version>${swagger-core-v2.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.swagger</groupId>
+        <artifactId>swagger-annotations</artifactId>
+        <version>${swagger-core-v2.version}</version>
+      </dependency>
       <!-- servicecomb -->
       <dependency>
         <groupId>org.apache.servicecomb</groupId>
