#423 modify akskCustomCipher to cipher

--- a/integration-tests/cse-v1/consumer/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v1/consumer/src/main/resources/bootstrap.yml
@@ -39,5 +39,5 @@ spring:
         enabled: true
         accessKey: ${CREDENTIALS_AK}
         secretKey: ${CREDENTIALS_SK}
-        akskCustomCipher: default
+        cipher: default
         project: cn-south-1
