--- a/integration-tests/cse-v1/gateway/src/main/resources/bootstrap.yml
+++ b/integration-tests/cse-v1/gateway/src/main/resources/bootstrap.yml
@@ -38,7 +38,7 @@ spring:
         enabled: true
         accessKey: ${CREDENTIALS_AK}
         secretKey: ${CREDENTIALS_SK}
-        akskCustomCipher: default
+        cipher: default
         project: cn-south-1
 
 ## rate limiting configuration
