--- a/integration-tests/cse-v2/provider/pom.xml
+++ b/integration-tests/cse-v2/provider/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>cse-v2-test</artifactId>
-    <version>1.6.0-Hoxton-SNAPSHOT</version>
+    <version>1.6.0-Hoxton</version>
   </parent>
 
   <name>Integration Tests::CSE V2::Provider</name>
