--- a/spring-cloud-huawei-common/pom.xml
+++ b/spring-cloud-huawei-common/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>com.huaweicloud</groupId>
     <artifactId>spring-cloud-huawei-parents</artifactId>
-    <version>1.6.0-Hoxton-SNAPSHOT</version>
+    <version>1.6.0-Hoxton</version>
     <relativePath>../spring-cloud-huawei-parents</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -87,14 +87,12 @@
       <artifactId>foundation-spi</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.huaweicloud</groupId>
+      <groupId>org.apache.servicecomb</groupId>
       <artifactId>http-client-common</artifactId>
-      <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.huaweicloud</groupId>
+      <groupId>org.apache.servicecomb</groupId>
       <artifactId>service-center-client</artifactId>
-      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
