--- a/integration-tests/cse-v1/pom.xml
+++ b/integration-tests/cse-v1/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>integration-tests</artifactId>
     <groupId>com.huaweicloud</groupId>
-    <version>1.6.0-Hoxton</version>
+    <version>1.7.0-SHAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
